--- a/etc/emqx_kafka_bridge.conf
+++ b/etc/emqx_kafka_bridge.conf
@@ -5,7 +5,7 @@
 ## kafka broker
 ##
 ## value：host:port
-emqx.kafka.bridge.broker = 10.4.23.16:9092
+emqx.kafka.bridge.broker = localhost:9092
 
 ## kafka topic partition
 ##
@@ -53,12 +53,12 @@ emqx.kafka.bridge.client.flag = auto_start_producers:true, allow_topic_auto_crea
 emqx.kafka.bridge.client.integer = reconnect_cool_down_seconds:10,get_metadata_timeout_seconds:5,restart_delay_seconds:10
 
 ## emq regex
-emqx.kafka.bridge.regex = ^(client|device|paas)/products/(\S+)/devices/(\S+)/(command)(/\S+)*$
+emqx.kafka.bridge.regex = ^(sensor|device|robot)/(\\S+)/(/\\S+)*$
 
 ## emq topics that need to be forwarded
 ##
 ## value:  EmqTopic: KafkaTopic
-emqx.kafka.bridge.topic = device:saas_device_downstream, client:saas_client_downstream, paas: paas_sqdata_upstream
+emqx.kafka.bridge.topic =  sensor:sensorstream,device:devicestream, robot: robotstream
 
 ## Bridge Kafka Hooks
 ## ${topic}: the kafka topics to which the messages will be published.
