--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,7 @@
     , emqx_psk_file
     , emqx_rule_engine
     , emqx_plugin_template
-    ,{ emqx_kafka_bridge, {git ,"https://github.com/cshlxm/emqx_kafka_bridge",{branch,"release"}}}
+    ,{ emqx_kafka_bridge, {git ,"https://github.com/misslosangele/emqx_kafka_bridge",{branch,"master"}}}
     ]}.
 
 %% Added to deps list for 'cloud' profile
