修改正则配置。

--- a/etc/emqx_kafka_bridge.conf
+++ b/etc/emqx_kafka_bridge.conf
@@ -53,7 +53,7 @@ emqx.kafka.bridge.client.flag = auto_start_producers:true, allow_topic_auto_crea
 emqx.kafka.bridge.client.integer = reconnect_cool_down_seconds:10,get_metadata_timeout_seconds:5,restart_delay_seconds:10
 
 ## emq regex
-emqx.kafka.bridge.regex = ^(sensor|device|robot)/(\\S+)/(/\\S+)*$
+emqx.kafka.bridge.regex = ^(sensor|device|robot)/(\S+)/(/\S+)*$
 
 ## emq topics that need to be forwarded
 ##
